# decision-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_GEMINI.md  CLAUDE.md  GITHUB_LOGIN_FEATURE.md  Makefile  OSS_RELEASE_SECURITY_AUDIT.md  PRD.md  README.md  REIMPLEMENTATION_ANALYSIS.md  SCALABILITY_REVIEW.md  SECURITY.md  TRACKER_REVIEW.md  VERSIONS.md  benchmark_after.json  benchmark_ask.py  benchmark_before.json  docker-compose-local.yml  install.sh  modal_app.py  pyproject.toml  tasks.md
client/: README.md  SKILL.md  pyproject.toml
client/src/dhub/: models.py
client/src/dhub/cli/: access.py  app.py  auth.py  banner.py  config.py  config_cmd.py  doctor.py  env.py  init.py  keys.py  org.py  output.py  registry.py  runtime.py  search.py  track.py  version_check.py
client/src/dhub/core/: git_repo.py  install.py  manifest.py  runtime.py  validation.py
client/tests/test_cli/: test_access_cli.py  test_auth_cli.py  test_config.py  test_doctor_cli.py  test_init_cli.py  test_install_plugin.py  test_install_repo.py  test_keys_cli.py  test_logs_cli.py  test_org_cli.py  test_output.py  test_publish_repo_cli.py  test_registry_cli.py  test_runtime_cli.py  test_search_cli.py  test_track.py  test_uninstall_cli.py  test_version_check.py
client/tests/test_core/: test_docx_integration.py  test_git_repo.py  test_install.py  test_install_symlinks.py  test_manifest.py  test_runtime.py  test_validation.py
server/: .env.example  LICENSE  gauntlet_backfill_dev.csv  modal_app.py  pyproject.toml  skillsmp_data-ai.json
server/docs/: gauntlet-false-positives-2026-03.md
server/migrations/: 001_initial.sql  005_eval_reports.sql  007_fix_schema_drift.sql  008_add_semver_int_columns.sql  009_add_database_indexes.sql  009_add_org_github_metadata.sql  009_add_search_logs.sql  010_enable_rls_all_tables.sql  011_add_timestamps.sql  011_create_eval_runs_and_add_is_personal.sql  20260211_150000_add_skill_trackers.sql  20260211_160000_add_org_email.sql  20260211_230000_add_skill_category.sql  20260212_030000_add_timestamps.sql  20260212_040000_add_org_github_metadata.sql  20260212_120000_add_fts_and_embeddings.sql  20260212_120000_add_skill_trackers_due_index.sql  20260212_120100_add_skill_trackers_due_index.sql  20260212_183819_add_grants_grantee_org_idx.sql  20260212_192744_denormalize_latest_version.sql  20260219_230810_add_next_check_at.sql  20260220_140222_create_tracker_metrics.sql  20260220_165900_add_source_repo_removed.sql  20260220_180808_add_github_repo_metadata.sql  20260220_185239_cleanup_orphaned_tracker_on_skill_delete.sql  20260220_200221_fix_cleanup_orphaned_tracker_scope_to_org.sql  20260220_204500_create_scan_tables.sql  20260220_221811_add_github_stars_to_skills.sql  20260224_205716_drop_eval_audit_logs.sql  20260225_191458_add_scan_report_model_metadata.sql  20260226_095941_add_gauntlet_summary.sql  20260226_151940_revoke_anon_grants_and_idle_timeout.sql  20260226_163218_recreate_eval_audit_logs.sql  20260226_225450_add_marketplace_generation.sql  20260227_094019_add_homepage_perf_indexes.sql  20260227_134829_add_manifest_path.sql  20260301_211812_pin_search_path_on_trigger_functions.sql  20260305_223006_add_plugin_tables.sql  20260306_093301_add_consecutive_permanent_failures.sql  20260306_101519_add_plugin_version_id_to_audit_logs.sql  (+2 more)
server/scripts/: backfill_categories.py  backfill_gauntlet.py  backfill_manifest_paths.py  backfill_trackers.py  gauntlet_comparison.py  migrate_access_grants.py
server/src/decision_hub/: logging.py  models.py  settings.py
server/src/decision_hub/api/: app.py  ask_routes.py  auth_routes.py  deps.py  keys_routes.py  org_routes.py  plugin_routes.py  rate_limit.py  registry_routes.py  registry_service.py  search_routes.py  seo_routes.py  (+2 more)
server/tests/: factories.py  helpers.py  slow_helpers.py
server/tests/test_api/: conftest.py  test_api_catchall.py  test_app_auth.py  test_auth_routes.py  test_cache_headers.py  test_deps.py  test_eval_logs.py  test_eval_report.py  test_health.py  test_keys_routes.py  test_logging.py  test_marketplace_generation.py  test_org_routes.py  test_plugin_visibility.py  test_rate_limit.py  test_registry_routes.py  test_registry_service.py  test_scan_report_routes.py  test_search_routes.py  test_security_headers.py  test_tracker_routes.py  test_version_middleware.py  test_visibility_routes.py
server/tests/test_domain/: test_arxiv_gauntlet.py  test_arxiv_gauntlet_with_llm.py  test_auth.py  test_classification.py  test_docx_skill_integration.py  test_evals.py  test_gauntlet.py  test_marketplace.py  test_orgs.py  test_plugin_audit_tracker_fixes.py  test_plugin_e2e.py  test_plugin_gauntlet.py  test_plugin_publish_pipeline.py  test_publish.py  test_registry_service_evals.py  test_run_streaming_eval.py  test_search.py  test_skill_manifest.py  test_skill_scanner_bridge.py  test_streaming_evals.py  test_tracker.py  test_tracker_service.py
server/tests/test_infra/: test_anthropic_client.py  test_ask_golden_set.py  test_ask_markdown.py  test_cache.py  test_database_by_repo.py  test_embeddings.py  test_escape_like.py  test_gemini.py  test_git_marketplace.py  test_git_marketplace_e2e.py  test_git_wsgi.py  test_github.py  test_github_app_token.py  test_github_client.py  test_marketplace_query.py  test_modal_client.py  test_plugin_pagination.py  test_storage_eval_logs.py  test_topicality_guard.py  test_tracker_db.py  test_validate_api_key.py
server/tests/test_scripts/: test_crawler_processing.py  test_github_crawler.py
shared/: pyproject.toml
shared/src/dhub_core/: __init__.py  manifest.py  models.py  plugin_manifest.py  taxonomy.py  validation.py  ziputil.py
shared/tests/: test_manifest.py  test_plugin_manifest.py  test_validation.py  test_ziputil.py
(+334 files in other folders)
