[project]
name = "dhub-cli"
version = "0.6.1"
description = "The AI Skill Manager for Data Science Agents"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Luca Fiaschi", email = "luca.fiaschi@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "dhub-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
]

[project.scripts]
dhub = "dhub.cli.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dhub"]

[project.urls]
Homepage = "https://github.com/lfiaschi/decision-hub"
Repository = "https://github.com/lfiaschi/decision-hub"
Issues = "https://github.com/lfiaschi/decision-hub/issues"

[tool.uv.sources]
dhub-core = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
