[project]
name = "decision-hub-server"
version = "0.1.0"
description = "The backend server for Decision Hub - AI agent skill registry"
authors = [
    { name = "PyMC Labs", email = "info@pymc-labs.com" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.0",
    "modal>=1.3.2",
    "loguru>=0.7.0",
    "pgvector>=0.3.0",
    "PyJWT[crypto]>=2.8.0",
    "dhub-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[s3]>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_hub"]

[tool.uv.sources]
dhub-core = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
