[project]
name = "dhub-core"
version = "0.2.1"
description = "Shared domain models and manifest parsing for Decision Hub"
authors = [
    { name = "PyMC Labs", email = "info@pymc-labs.com" },
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dhub_core"]
